--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
     "tabWidth": 2,
     "singleQuote": true,
     "jsxSingleQuote": true,
+    "printWidth": 70,
     "plugins": ["prettier-plugin-tailwindcss"]
   }
