--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
