--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "autoprefixer": "^10.4.19",
+    "flowbite": "^2.3.0",
+    "flowbite-datepicker": "^1.2.7",
+    "flowbite-react": "^0.9.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
