--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "flowbite-datepicker": "^1.2.7",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
