--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@monaco-editor/react": "^4.6.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "flowbite": "^2.3.0",
     "flowbite-datepicker": "^1.2.7",
@@ -22,6 +24,7 @@
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.7"
   },
