--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "flowbite-datepicker": "^1.2.7",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
+    "next-client-cookies": "^1.1.1",
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.5.0",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
