--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@monaco-editor/react": "^4.6.0",
     "autoprefixer": "^10.4.19",
     "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "flowbite": "^2.3.0",
     "flowbite-datepicker": "^1.2.7",
     "flowbite-react": "^0.9.0",
