--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "flowbite": "^2.3.0",
     "flowbite-datepicker": "^1.2.7",
     "flowbite-react": "^0.9.0",
+    "highlight.js": "^11.10.0",
+    "marked": "^13.0.2",
     "next": "14.2.3",
     "next-client-cookies": "^1.1.1",
     "prismjs": "^1.29.0",
