--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "flowbite-react": "^0.9.0",
     "highlight.js": "^11.10.0",
     "marked": "^13.0.2",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "next-client-cookies": "^1.1.1",
     "prismjs": "^1.29.0",
     "react": "^18",
